# src/app/app.routes.ts
@@ -1,18 +1,28 @@
 import { Routes } from '@angular/router';
+import { authGuard } from './auth/infrastructure/auth.guard';
 
 export const routes: Routes = [
   {
     path: 'recipes',
+    canActivate: [authGuard],
+    loadComponent: () =>
+      import('./recipes/ui/recipe-list/recipe-list.component').then((m) => m.RecipeListComponent),
+  },
+   {
+    path: 'recipes/favorites',
+    canActivate: [authGuard],
     loadComponent: () =>
       import('./recipes/ui/recipe-list/recipe-list.component').then((m) => m.RecipeListComponent),
   },
   {
     path: 'recipes/new',
+    canActivate: [authGuard],
     loadComponent: () =>
       import('./recipes/ui/recipe-add/recipe-add.component').then((m) => m.RecipeAddComponent),
   },
   {
     path: 'recipes/:id',
+    canActivate: [authGuard],
     loadComponent: () =>
       import('./recipes/ui/recipe-detail/recipe-detail.component').then(
         (m) => m.RecipeDetailComponent,
@@ -30,6 +40,7 @@ export const routes: Routes = [
   },
   {
     path: 'categories',
+    canActivate: [authGuard],
     loadComponent: () =>
       import('./categories/ui/category-list/category-list.component').then(
         (m) => m.CategoryListComponent,
@@ -37,6 +48,7 @@ export const routes: Routes = [
   },
   {
     path: 'categories/new',
+    canActivate: [authGuard],
     loadComponent: () =>
       import('./categories/ui/category-add/category-add.component').then(
         (m) => m.CategoryAddComponent,
