# src/app/categories/domain/category.model.ts
@@ -1,7 +1,10 @@
 export interface Category {
   id?: number;
+  clientId?: string;
   name: string;
   description?: string;
   createdAt?: string;
   updatedAt?: string;
+  deletedAt?: string;
+  pendingSync?: boolean;
 }
